syntax = "proto3";

//same name as the pom
option java_package = "com.factorAuthService";
//this line does not change
option java_multiple_files = true;
//this line will be used later (the name)
option java_outer_classname = "factorAuthImpl";

service factorAuthService{

  rpc sendFactorAuth(stream containAuth) returns (stream containAuthVerification){}
}

message containAuth{
  string message = 1;
}

  message containAuthVerification{
    string message = 1;
}