syntax = "proto3";

//same name as the pom
option java_package = "com.locationService";
//this line does not change
option java_multiple_files = true;
//this line will be used later (the name)
option java_outer_classname = "locationServiceImpl";

service locationService{

	rpc GetLocation(containsLocation) returns (containsLocation){}

}

message containsLocation{
	string location = 1;
}